[package]
name = "rjwt"
version = "0.4.1"
authors = ["haydnv"]
edition = "2018"
description = "A recursive JSON Web Token, part of Tinychain: https://git.io/JtryR"
license = "Apache-2.0"
repository = "http://github.com/haydnv/rjwt.git"

keywords = ["jwt", "recursive", "oauth", "token", "scope"]
categories = ["authentication", "web-programming"]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
ed25519-dalek = "1.0"
futures = "0.3"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signature = "1.1"
