[metadata]
name = rjwt
version = 0.1.0
author = The TinyChain Contributors
author_email = haydn@tinychain.net
description = Recursive JavaScript Web Token
keywords = 'jwt cryptography signing recursive distributed'
url = https://github.com/haydnv/rjwt
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Internet
    Topic :: Security :: Cryptography
    Topic :: Software Development

[options]
packages = find:
python_requires = >=3.9
install_requires =
    requests
