[package]
name = "rjwt"
version = "0.5.0"
edition = "2021"
authors = ["code@tinychain.net"]
description = "A recursive Javascript Web Token with support for ECDSA and Falcon"
license = "Apache-2.0"
repository = "https://github.com/haydnv/rjwt.git"

keywords = ["jwt", "recursive", "oauth", "token", "scope"]
categories = ["authentication", "web-programming"]

[dependencies]
base64 = "0.21"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
signature = "2.2"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
